--- a/style.css
+++ b/style.css
@@ -66,6 +66,14 @@
         animation-delay: 3.5s;
     }
 
+    #delayed5 {
+        animation-delay: 3.5s;
+    }
+
+    #delayed6 {
+        animation-delay: 4.0s;
+    }
+
     @keyframes fuck {
         from {
             opacity: 0;
